--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -14,6 +14,9 @@
   z-index: 2000;
   border-radius: 2px;
   @include box-shadow(0 20px 32px rgba(0, 0, 0, 0.12));
+  @media screen and (max-width: $breakpoint-width){
+    padding-top: 70px;
+  }
   > ul {
     padding-top: 8px;
   }
