--- a/scss/global.css
+++ b/scss/global.css
@@ -60,12 +60,16 @@ header {
   -ms-transition: top 0.25s ease-in-out;
   -o-transition: top 0.25s ease-in-out;
   transition: top 0.25s ease-in-out; }
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 992px) {
     .wsieee-navbar {
       height: 150px; } }
 
 .wsieee-navbar-nav {
   display: inline; }
+  @media screen and (max-width: 992px) {
+    .wsieee-navbar-nav {
+      font-size: 14px;
+      line-height: 1.15; } }
   .wsieee-navbar-nav > li {
     display: inline-block;
     padding-left: 1%;
@@ -128,6 +132,9 @@ header {
 
 .main-nav {
   padding-top: 1.3%; }
+  @media screen and (max-width: 992px) {
+    .main-nav {
+      padding-top: 0; } }
 
 body {
   padding-top: 75px; }
@@ -165,7 +172,7 @@ main.content {
   perspective: 1500px; }
 
 .nav-up {
-  top: -120px; }
+  top: -150px; }
 
 .noscroll {
   overflow: hidden !important; }
@@ -270,6 +277,9 @@ a.button-text {
   -webkit-box-shadow: 0 20px 32px rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 20px 32px rgba(0, 0, 0, 0.12);
   box-shadow: 0 20px 32px rgba(0, 0, 0, 0.12); }
+  @media screen and (max-width: 992px) {
+    #sidebar {
+      padding-top: 70px; } }
   #sidebar > ul {
     padding-top: 8px; }
   #sidebar > ul > li {
