--- a/scss/_main_content.scss
+++ b/scss/_main_content.scss
@@ -9,10 +9,11 @@
 }
 
 .splash-caption {
-  position: absolute;
+  //position: absolute;
   text-align: center;
-  left: 40%;
-  top: 15%;
+  //left: 40%;
+  //top: 15%;
+  margin-top: 15%;
   z-index: 10;
   padding-top: 150px;
   color: $white;
@@ -22,6 +23,13 @@
   -moz-border-radius: 50%;
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.45);
+  @media screen and (max-width: $breakpoint-width) {
+    width: 300px;
+    height: 300px;
+    padding-top: 70px;
+    margin-top: 160px;
+    margin-left: -115px;
+  }
   a {
     margin-top: 0;
     margin-bottom: 0;
