--- a/scss/global.css
+++ b/scss/global.css
@@ -445,10 +445,8 @@ a.button-text {
   padding-top: 0; }
 
 .splash-caption {
-  position: absolute;
   text-align: center;
-  left: 40%;
-  top: 15%;
+  margin-top: 15%;
   z-index: 10;
   padding-top: 150px;
   color: white;
@@ -458,6 +456,13 @@ a.button-text {
   -moz-border-radius: 50%;
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.45); }
+  @media screen and (max-width: 992px) {
+    .splash-caption {
+      width: 300px;
+      height: 300px;
+      padding-top: 70px;
+      margin-top: 160px;
+      margin-left: -115px; } }
   .splash-caption a {
     margin-top: 0;
     margin-bottom: 0; }
