--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -51,7 +51,7 @@ header {
     display: inline-block;
     padding-left: 1%;
     padding-right: 1%;
-    @include breakpoint(laptop) {
+    @media screen and (max-width: 1200px) {
       padding: 0;
     }
     > a {
