Fixed hover again and removed ul styles on the temporary calendar.

--- a/scss/_main_content.scss
+++ b/scss/_main_content.scss
@@ -9,7 +9,8 @@
 }
 
 .splash-caption {
-  //position: absolute;
+  /* Position absolute required for hover functionality */
+  position: absolute;
   text-align: center;
   //left: 40%;
   //top: 15%;
