--- a/scss/global.css
+++ b/scss/global.css
@@ -445,6 +445,8 @@ a.button-text {
   padding-top: 0; }
 
 .splash-caption {
+  /* Position absolute required for hover functionality */
+  position: absolute;
   text-align: center;
   margin-top: 15%;
   z-index: 10;
