Finishing touches before I send to WSIEEE.

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,3 +1,5 @@
 //FONTS
 /* GLOBAL FONTS */
 $regular-size: 16px;
+$font-family: 'Open sans', 'Oxygen', sans-serif;
+$header-font-family: 'PT Serif', serif;
