--- a/scss/_main_content.scss
+++ b/scss/_main_content.scss
@@ -12,8 +12,6 @@
   /* Position absolute required for hover functionality */
   position: absolute;
   text-align: center;
-  //left: 40%;
-  //top: 15%;
   margin-top: 15%;
   z-index: 10;
   padding-top: 150px;
@@ -36,7 +34,7 @@
     margin-bottom: 0;
   }
   h3 {
-    font-weight: 600;
+    //font-weight: 600;
     letter-spacing: 3px;
   }
 }
