--- a/scss/global.scss
+++ b/scss/global.scss
@@ -3,6 +3,11 @@
 @import 'header';
 body{
   padding-top: $header_height;
+  font-family: $font-family;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $header-font-family;
 }
 @import 'mainSettings';
 @import 'buttons';
